scripts/deploy/kubernetes/job-generator.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-generator-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: job-generator
  template:
    metadata:
      labels:
        app: job-generator
    spec:
      containers:
        - name: job-generator
          image: liscioapps/sphere-backend:1714489992.58c54d51
          workingDir: /usr/crowd/app/backend
          command: ['npm']
          args: ['run', 'start:job-generator']
