scripts/deploy/kubernetes/python-worker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-worker-dpl
spec:
  selector:
    matchLabels:
      app: python-worker
  template:
    metadata:
      labels:
        app: python-worker
    spec:
      containers:
        - name: python-worker
          image: liscioapps/sphere-python-worker:1714489062.cdb94b3b
