scripts/deploy/kubernetes/workers.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: automations-worker-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: automations-worker
  template:
    metadata:
      labels:
        app: automations-worker
    spec:
      containers:
        - name: automations-worker
          image: liscioapps/sphere-automations-worker:1714504030.d322b634
          workingDir: /usr/crowd/app/services/apps/automations_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-worker-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: cache-worker
  template:
    metadata:
      labels:
        app: cache-worker
    spec:
      containers:
        - name: cache-worker
          image: liscioapps/sphere-cache-worker:1714511229.2d0ae48d
          workingDir: /usr/crowd/app/services/apps/cache_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-sink-worker-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: data-sink-worker
  template:
    metadata:
      labels:
        app: data-sink-worker
    spec:
      containers:
        - name: data-sink-worker
          image: liscioapps/sphere-data-sink-worker:1714511473.2d0ae48d
          workingDir: /usr/crowd/app/services/apps/data_sink_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: entity-merging-worker-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: entity-merging-worker
  template:
    metadata:
      labels:
        app: entity-merging-worker
    spec:
      containers:
        - name: entity-merging-worker
          image: liscioapps/sphere-entity-merging-worker:1714524331.2d0ae48d
          workingDir: /usr/crowd/app/services/apps/entity_merging_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-run-worker-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: integration-run-worker
  template:
    metadata:
      labels:
        app: integration-run-worker
    spec:
      containers:
        - name: integration-run-worker
          image: liscioapps/sphere-integration-run-worker:1714525074.2d0ae48d
          workingDir: /usr/crowd/app/services/apps/integration_run_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-stream-worker-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: integration-stream-worker
  template:
    metadata:
      labels:
        app: integration-stream-worker
    spec:
      containers:
        - name: integration-stream-worker
          image: liscioapps/sphere-integration-stream-worker:1714525133.2d0ae48d
          workingDir: /usr/crowd/app/services/apps/integration_stream_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integration-sync-worker-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: integration-sync-worker
  template:
    metadata:
      labels:
        app: integration-sync-worker
    spec:
      containers:
        - name: integration-sync-worker
          image: liscioapps/sphere-integration-sync-worker:1714525295.2d0ae48d
          workingDir: /usr/crowd/app/services/apps/integration_sync_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: merge-suggestions-worker-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: merge-suggestions-worker
  template:
    metadata:
      labels:
        app: merge-suggestions-worker
    spec:
      containers:
        - name: merge-suggestions-worker
          image: liscioapps/sphere-merge-suggestions-worker:1714527620.0b14e1b4
          workingDir: /usr/crowd/app/services/apps/merge_suggestions_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profiles-worker-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: profiles-worker
  template:
    metadata:
      labels:
        app: profiles-worker
    spec:
      containers:
        - name: profiles-worker
          image: liscioapps/sphere-profiles-worker:1714527896.0b14e1b4
          workingDir: /usr/crowd/app/services/apps/profiles_worker
          command: ['pnpm']
          args: ['run', 'start']
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webhook-api-dpl
  labels:
    force-reload: 'true'
spec:
  selector:
    matchLabels:
      app: webhook-api
  template:
    metadata:
      labels:
        app: webhook-api
    spec:
      containers:
        - name: webhook-api
          image: liscioapps/sphere-webhook-api:1714528133.0b14e1b4
          workingDir: /usr/crowd/app/services/apps/webhook_api
          command: ['pnpm']
          args: ['run', 'start']
