scripts/deploy/kubernetes/cubejs.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cubejs-dpl
spec:
  selector:
    matchLabels:
      app: cubejs
  template:
    metadata:
      labels:
        app: cubejs
    spec:
      containers:
        - name: cubejs
          image: liscioapps/sphere-cubejs:1714137479.9d70374c
          ports:
            - containerPort: 4000
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: cubejs-svc
spec:
  selector:
    app: cubejs
  ports:
    - port: 4000
      targetPort: 4000
      name: management
    - port: 3000
      targetPort: 3000
      name: application
