scripts/deploy/kubernetes/db.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-dpl
spec:
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
        - name: db
          image: crowddotdev/db:1666875695.899aa137
          ports:
            - containerPort: 5432
---
apiVersion: v1
kind: Service
metadata:
  name: db-svc
spec:
  type: ClusterIP
  selector:
    app: db
  ports:
    - port: 5432
      targetPort: 5432
