scripts/deploy/kubernetes/elasticmq.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticmq-dpl
spec:
  selector:
    matchLabels:
      app: elasticmq
  template:
    metadata:
      labels:
        app: elasticmq
    spec:
      containers:
        - name: elasticmq
          image: liscioapps/sphere-elasticmq:1714487284.ce6964eb
          ports:
            - containerPort: 9324
---
apiVersion: v1
kind: Service
metadata:
  name: elasticmq-svc
spec:
  selector:
    app: elasticmq
  ports:
    - port: 9324
      targetPort: 9324
