scripts/deploy/kubernetes/nango.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nango-dpl
spec:
  selector:
    matchLabels:
      app: nango
  template:
    metadata:
      labels:
        app: nango
    spec:
      containers:
        - name: nango
          image: nangohq/nango-server:0.9.0
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: nango-svc
spec:
  type: ClusterIP
  selector:
    app: nango
  ports:
    - port: 3003
      targetPort: 3003
