scripts/deploy/kubernetes/opensearch.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: opensearch-dpl
spec:
  selector:
    matchLabels:
      app: opensearch
  template:
    metadata:
      labels:
        app: opensearch
    spec:
      securityContext:
        fsGroup: 1000
        runAsUser: 1000
      volumes:
      - name: opensearch-data
        persistentVolumeClaim:
          claimName: opensearch-pvc
      containers:
        - name: opensearch
          image: opensearchproject/opensearch:2.7.0
          ports:
            - containerPort: 9200
              name: http
            - containerPort: 9300
              name: transport
          volumeMounts:
            - name: opensearch-data
              mountPath: /usr/share/opensearch/data
          resources:
            limits:
              cpu: "2"
              memory: "6Gi"
            requests:
              cpu: "1"
              memory: "3Gi"

# Missing from test config
  # ulimits:
  #   memlock:
  #     soft: -1
  #     hard: -1
  #   nofile:
  #     soft: 65536
  #     hard: 65536
---
apiVersion: v1
kind: Service
metadata:
  name: search-engine-svc
spec:
  type: ClusterIP
  selector:
    app: opensearch
  ports:
    - port: 9200
      targetPort: 9200
      name: http
    - port: 9600
      targetPort: 9600
      name: transport
