scripts/deploy/kubernetes/pizzly.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pizzly-dpl
spec:
  selector:
    matchLabels:
      app: pizzly
  template:
    metadata:
      labels:
        app: pizzly
    spec:
      containers:
        - name: pizzly
          image: nangohq/pizzly-server:0.4.0
          ports:
            - containerPort: 3003
---
apiVersion: v1
kind: Service
metadata:
  name: pizzly-svc
spec:
  type: ClusterIP
  selector:
    app: pizzly
  ports:
    - port: 3003
      targetPort: 3003
