scripts/deploy/kubernetes/premium-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: premium-api-dpl
spec:
  selector:
    matchLabels:
      app: premium-api
  template:
    metadata:
      labels:
        app: premium-api
    spec:
      containers:
        - name: premium-api
          image: crowddotdev/premium-python-backend:1666877885.9731ed18
          command: ['python']
          args:
            [
              '-u',
              '-m',
              'flask',
              '--app',
              'server',
              '--debug',
              'run',
              '--host=0.0.0.0',
            ]
          ports:
            - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: premium-api-svc
spec:
  type: ClusterIP
  selector:
    app: premium-api
  ports:
    - port: 5000
      targetPort: 5000
