scripts/deploy/kubernetes/redis.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-dpl
  labels:
    force-update: "true"
spec:
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: liscioapps/sphere-redis:1714089032.bd9a4a5f
          command: ['redis-server']
          args: ['/redis.conf', '--requirepass', 'crowdtest']
          ports:
            - containerPort: 6379
---
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
