scripts/deploy/kubernetes/search-engine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-engine-dpl
spec:
  selector:
    matchLabels:
      app: search-engine
  template:
    metadata:
      labels:
        app: search-engine
    spec:
      containers:
        - name: search-engine
          image: getmeili/meilisearch:v0.27.2
          ports:
            - containerPort: 7700
---
apiVersion: v1
kind: Service
metadata:
  name: search-engine-svc
spec:
  selector:
    app: search-engine
  ports:
    - port: 7700
      targetPort: 7700
