scripts/deploy/kubernetes/search-sync-api.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-sync-api-dpl
  labels:
    force-reload: "true"
spec:
  selector:
    matchLabels:
      app: search-sync-api
  template:
    metadata:
      labels:
        app: search-sync-api
    spec:
      containers:
        - name: search-sync-api
          image: liscioapps/sphere-search-sync-api:1715325650.eece5234
          workingDir: /usr/crowd/app/services/apps/search_sync_api
          command: ["pnpm"]
          args: ["run", "start"]
---
apiVersion: v1
kind: Service
metadata:
  name: search-sync-api-svc
spec:
  type: ClusterIP
  selector:
    app: search-sync-api
  ports:
    - port: 8083
      targetPort: 8083
