scripts/deploy/kubernetes/unleash.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unleash-dpl
spec:
  selector:
    matchLabels:
      app: unleash
  template:
    metadata:
      labels:
        app: unleash
    spec:
      containers:
        - name: unleash
          image: unleashorg/unleash-server:latest
          ports:
            - containerPort: 4242
---
apiVersion: v1
kind: Service
metadata:
  name: unleash-svc
spec:
  type: ClusterIP
  selector:
    app: unleash
  ports:
    - port: 4242
      targetPort: 4242
